# pt

./: .clang-format  CMakeLists.txt  README.md
src/: bsdf.cpp  bsdf.h  defs.h  integrator.cpp  integrator.h  intersection.h  kdtree.cpp  kdtree.h  light.cpp  light.h  main.cpp  material.cpp  material.h  maxheap.cpp  maxheap.h  neeintegrator.cpp  neeintegrator.h  photon.h  photonintegrator.cpp  photonintegrator.h  photonmap.cpp  photonmap.h  pixel.h  prim.cpp  prim.h  ray.h  renderer.cpp  renderer.h  sample.h  sampler.h  scene.h  utils.h  vec.h  window.cpp  window.h
src/integrators/: integrator.cpp  integrator.h  neeintegrator.cpp  neeintegrator.h  photonintegrator.cpp  photonintegrator.h
src/lights/: light.cpp  light.h
src/materials/: bsdf.cpp  bsdf.h  material.cpp  material.h
src/photonmap/: kdtree.cpp  kdtree.h  maxheap.cpp  maxheap.h  photonmap.cpp  photonmap.h
src/render/: intersection.h  prim.cpp  prim.h  renderer.cpp  renderer.h  scene.h  window.cpp  window.h
src/scene/: scene.h  scenes.cpp  scenes.h
src/utils/: defs.h  photon.h  pixel.h  ray.h  sampler.h  utils.h  vec.h
